# ds-witness

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: release.yml
docs/: fsp.md
public/data/: datasets.json  ffmq-15.psv  frontswitchpool.psv  gad-7.psv  phq-9.psv
scripts/: export-fsp.js  fsp-template.md  seed-dev.js
src/: datasets.ts  db.ts  disclaimer.ts  dormancy.ts  emotes.ts  main.ts  questions.ts  radar.ts  router.ts  sampling.ts  scoring.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: assessment.ts  history.ts  home.ts  import.ts  summary.ts
