[package]
name = "dsw"
version = "1.0.0"
description = "Dissociative System Witness"
authors = []
edition = "2021"

[lib]
name = "dsw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dsw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
